[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/PlatformerTileset.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HiddenSpikes.gd" type="Script" id=2]
[ext_resource path="res://Assets/TempleSpikes.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 28 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="HiddenSpikes" type="Node2D"]
script = ExtResource( 2 )

[node name="Spikes" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Spikes"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikes"]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="SpikeRiseTimer" type="Timer" parent="Spikes"]
one_shot = true

[node name="SpikeUpTimer" type="Timer" parent="Spikes"]
one_shot = true

[node name="SpikeRetractTimer" type="Timer" parent="Spikes"]
one_shot = true

[node name="SpikeDownTimer" type="Timer" parent="Spikes"]
one_shot = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="Spikes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikes/KinematicBody2D"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Floor" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Floor"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 80, 64, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="body_entered" from="Spikes" to="." method="_on_Spikes_body_entered"]
[connection signal="timeout" from="Spikes/SpikeRiseTimer" to="." method="_on_SpikeRiseTimer_timeout"]
[connection signal="timeout" from="Spikes/SpikeUpTimer" to="." method="_on_SpikeUpTimer_timeout"]
[connection signal="timeout" from="Spikes/SpikeRetractTimer" to="." method="_on_SpikeRetractTimer_timeout"]
[connection signal="timeout" from="Spikes/SpikeDownTimer" to="." method="_on_SpikeDownTimer_timeout"]
